Fix line icon overlap position (blogs)

--- a/sass/theme/content/_lines.scss
+++ b/sass/theme/content/_lines.scss
@@ -1,6 +1,6 @@
 .line-icon-overlap {
 	position: absolute;
-	top: -35px;
+	top: -28%;
 	left: 50%;
 	transform: translateX(-50%);
 	width: 75px;
